<resources>
    <string name="app_name">CutCalc</string>

    <string name="action_settings">Settings</string>
    <string name="string_button_drilling">Drilling</string>
    <string name="string_button_milling">Milling</string>
    <string name="string_button_turning">Turning</string>
    <string name="string_cutting_speed">Cutting speed</string>
    <string name="string_diameter">Diameter</string>
    <string name="string_rpm">RPM</string>
    <string name="string_pvc">PVC</string>
    <string name="string_calculate">Calculate!</string>
    <string name="string_default_cutting_speed" translatable="false">20</string>
    <string name="string_default_diameter" translatable="false">5</string>
    <string name="string_vc_drilling" translatable="false">18</string>
    <string name="string_vc_milling" translatable="false">20</string>
    <string name="string_vc_turning" translatable="false">50</string>

    <string name="string_no_monkey">According to Google, you are not a monkey...</string>
    <string name="string_monkey">Congratulations! You are officially a monkey!</string>

    <!-- Feed Rate -->
    <string name="title_activity_feed_rate">Feed Rate</string>
    <string name="action_features">Features</string>
    <string name="action_features_rpm">RPM</string>

    <string name="string_default_blades_drilling" translatable="false">1</string>
    <string name="string_default_blades_milling" translatable="false">4</string>
    <string name="string_default_blades_turning" translatable="false">1</string>
    <string name="string_default_feed" translatable="false">0.1</string>
    <string name="string_default_blades" translatable="false">4</string>

    <string name="string_feed">Feed</string>
    <string name="string_blades">Blades</string>
    <string name="string_feed_rate">Feed Rate</string>
    <string name="change_background">Change background on mode change</string>
    <string name="pref_change_background">Change Background on mode change</string>
    <string name="pref_description_change_background">To improve performance toggle whether or not the background should be changed according to the mode you\'re in</string>
    <string name="pref_title_default_milling_cuttingspeed">Default cutting speed for milling</string>
    <string name="pref_title_default_turning_cuttingspeed">Default cutting speed for turning</string>
    <string name="pref_title_default_drilling_cuttingspeed">Default cutting speed for drilling</string>
    <string name="pref_title_default_milling_blades">Default number of blades for milling</string>
    <string name="pref_title_default_turning_blades">Default number of blades for turning</string>
    <string name="pref_title_default_drilling_blades">Default number of blades for drilling</string>
    <string name="pref_title_default_feed">Default feed per blade</string>
    <string name="pref_pvc_default">Use PVC as default</string>
    <string name="pref_description_pvc_default">Enables the PVC switch by default. Handy when working a lot with PVC</string>
    <string name="action_features_feedRate">Feed rate</string>

    <string name="pref_header_general">General</string>
    <string name="title_activity_settings">Settings</string>

    <string name="toast_add_blades">Please add the number of Blades!</string>
    <string name="toast_add_feed">Please add a Feed value!</string>
    <string name="toast_add_rpm">Please add a RPM value!</string>
    <string name="toast_add_diameter">Please add a diameter value!</string>
    <string name="toast_add_cutting_speed">Please add a Cutting Speed value!</string>
    <string name="pref_dark_theme">Use a dark theme</string>
    <string name="pref_description_dark_theme">Switch to a dark theme</string>
    <string name="pref_title_default_pvc_multiplier">Default PVC switch multiplier</string>
    <string name="pref_title_default_feed_milling">Default feed per blade for Milling</string>
    <string name="pref_title_default_feed_turning">Default feed per blade for Turning</string>
    <string name="pref_title_default_feed_drilling">Default feed per blade for Drilling</string>
    <string name="pref_title_text_color">Text Color</string>
    <string name="title_activity_color">ColorActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="pref_title_color_hex_code">Custom Color hex code</string>
    <string name="color">Color</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="unknown">Unknown</string>
    <string name="author">Author</string>
    <string name="author_text" translatable="false">Stefan Zimmer</string>
    <string name="xda_thread">View XDA Thread</string>
    <string name="github">View Sourcecode on GitHub</string>
    <string name="toast_invalid_colorcode">Hex Color code is not valid! Falling back to default color.</string>
    <string name="pref_title_background_color">Background Color</string>
    <string name="pref_description_no_background">Do not show a background image</string>
    <string name="pref_no_background">No Background Image</string>
    <string name="toast_easteregg">You have clicked Version too often, all Hell is about to break loose...</string>
    <string name="toast_easteregg_restore">Lucky you, you found a way to un-break it again...</string>
    <string name="title_activity_help_rpm">HelpRpm</string>

</resources>
