<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_general">

    <CheckBoxPreference
        android:key="dark_theme"
        android:title="@string/pref_dark_theme"
        android:summary="@string/pref_description_dark_theme"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="no_background"
        android:title="@string/pref_no_background"
        android:summary="@string/pref_description_no_background"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="change_background"
        android:title="@string/pref_change_background"
        android:summary="@string/pref_description_change_background"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pvc_default"
        android:title="@string/pref_pvc_default"
        android:summary="@string/pref_description_pvc_default"
        android:defaultValue="false" />
</PreferenceCategory>
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory
        android:title="@string/string_rpm">
    <EditTextPreference
        android:key="default_milling_cuttingspeed"
        android:title="@string/pref_title_default_milling_cuttingspeed"
        android:defaultValue="@string/string_vc_milling"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="default_turning_cuttingspeed"
        android:title="@string/pref_title_default_turning_cuttingspeed"
        android:defaultValue="@string/string_vc_turning"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="default_drilling_cuttingspeed"
        android:title="@string/pref_title_default_drilling_cuttingspeed"
        android:defaultValue="@string/string_vc_drilling"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="default_pvc_multiplier_rpm"
        android:title="@string/pref_title_default_pvc_multiplier"
        android:defaultValue="@integer/multiplier_switch"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:maxLines="1" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/string_feed_rate">
    <EditTextPreference
        android:key="default_feed_milling"
        android:title="@string/pref_title_default_feed_milling"
        android:defaultValue="@string/string_default_feed"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="default_feed_turning"
        android:title="@string/pref_title_default_feed_turning"
        android:defaultValue="@string/string_default_feed"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="default_feed_drilling"
        android:title="@string/pref_title_default_feed_drilling"
        android:defaultValue="@string/string_default_feed"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="default_milling_blades"
        android:title="@string/pref_title_default_milling_blades"
        android:defaultValue="@string/string_default_blades_milling"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="default_turning_blades"
        android:title="@string/pref_title_default_turning_blades"
        android:defaultValue="@string/string_default_blades_turning"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="default_drilling_blades"
        android:title="@string/pref_title_default_drilling_blades"
        android:defaultValue="@string/string_default_blades_drilling"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="default_pvc_multiplier_feed"
        android:title="@string/pref_title_default_pvc_multiplier"
        android:defaultValue="@integer/multiplier_switch"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:maxLines="1" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/color">
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="text_color"
        android:title="@string/pref_title_text_color"
        android:entries="@array/pref_text_color_titles"
        android:entryValues="@array/pref_text_color_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <ListPreference
        android:key="background_color"
        android:title="@string/pref_title_background_color"
        android:entries="@array/pref_background_color_titles"
        android:entryValues="@array/pref_background_color_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <EditTextPreference
        android:key="color_hex_code"
        android:title="@string/pref_title_color_hex_code"
        android:defaultValue="@color/white"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:singleLine="true"
        android:maxLines="1"
        android:digits="0123456789abcdef#"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">

    <Preference
        android:key="version"
        android:title="@string/version"
        android:summary="@string/unknown"
        android:icon="@mipmap/ic_launcher_new"/>

    <Preference
        android:key="copyright"
        android:title="@string/author"
        android:summary="@string/author_text"
        android:icon="@drawable/profile_pic">
        <intent android:action="android.intent.action.VIEW"
                android:data="http://forum.xda-developers.com/member.php?u=4716493" />
    </Preference>

    <Preference
        android:key="xda_thread"
        android:title="@string/xda_thread"
        android:icon="@drawable/logo">
        <intent android:action="android.intent.action.VIEW"
                android:data="http://forum.xda-developers.com/android/apps-games/app-cutcalc-simple-cutting-data-t3087223" />
    </Preference>

    <Preference
        android:key="github"
        android:title="@string/github"
        android:icon="@drawable/octocat">
        <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/laufersteppenwolf/CutCalc" />
    </Preference>
    </PreferenceCategory>

</PreferenceScreen>
